# gtrace-monitor-tool

./: .env.example  .gitignore  PROJECT.md  README.md  logs.jsonl  pyproject.toml
.streamlit/: config.toml
docs/: tracer.md  tracer_v2.md  tracer_v2_stream.md
scripts/: fill-dot-env.sh
src/tracer/: app.py
src/tracer/analysis/: tokens.py
src/tracer/core/: constants.py  logging.py  settings.py
src/tracer/ingestion/: cloudwatch.py  parser.py
src/tracer/models/: filters.py  trace.py
src/tracer/samples/: logs.jsonl  logs.jsonl.bak.20260326-143955  logs.jsonl.bak.20260326-144144.third  logs.jsonl.bak.20260326-144255.fourth  logs.jsonl.bak.20260326-144342.fifth
src/tracer/ui/: state.py  utils.py
src/tracer/ui/components/: date_picker.py  filter_bar.py  folder_picker.py  main_content.py  sidebar.py  trace_detail.py  trace_list.py
src/tracer/ui/styles/: theme.py
