[project]
name = "tracer-streamlit"
version = "0.1.0"
description = "Streamlit application for tracing agent logs on AWS CloudWatch"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.13.1",
    "streamlit>=1.45.0",
    "boto3>=1.38.0",
    "pandas>=2.2.0",
    "plotly>=6.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracer"]
